--- a/index.html
+++ b/index.html
@@ -253,6 +253,33 @@
       <div id="hard-one" class="modal">
         <div class="modal-content">
           <h3>Книга внакидку</h3>
+          <div class="row">
+            <div class="col s6">
+              <div class="carousel">
+                <a class="carousel-item" href="#one!"><img src="https://lorempixel.com/250/250/nature/1"></a>
+                <a class="carousel-item" href="#two!"><img src="https://lorempixel.com/250/250/nature/2"></a>
+                <a class="carousel-item" href="#three!"><img src="https://lorempixel.com/250/250/nature/3"></a>
+                <a class="carousel-item" href="#four!"><img src="https://lorempixel.com/250/250/nature/4"></a>
+                <a class="carousel-item" href="#five!"><img src="https://lorempixel.com/250/250/nature/5"></a>
+              </div>
+
+            </div>
+            <div class="col s6">
+              <div class="card-panel z-depth-4">
+                <h2>Книга стандартная</h2>
+
+                <p>Твердый переплет из картона толщиной 2 мм.</p>
+                <p>Сшивка блока внакидку на нитку, листы раскрываются на 180 градусов.</p>
+                <p>Обязательная ламинация обложки и форзаца. Внутренние листы ламинируются по желанию.</p>
+                <p>Виды ламинации: глянцевая, матовая, антицарапин.</p>
+                <p>На 1 печатный лист внутреннего блока помещается 4 страницы.</p>
+                <button class="btn waves-effect waves-light modal-trigger" data-target="order">Заказать</button>
+              </div>
+              <h2>Размеры:</h2>
+
+
+            </div>
+          </div>
         </div>
       </div>
 
