--- a/index.html
+++ b/index.html
@@ -71,11 +71,16 @@
               <div class="content row">
                 <div class="col s8 photo">
                   <div class="carousel carousel-slider">
-                      <a class="carousel-item" href="#three!"><img src="./images/products/svadebny/photobooks/two-r.jpg"></a>
-                    <a class="carousel-item" href="#one!"><img src="./images/products/svadebny/photobooks/face-r.jpg"></a>
-                    <a class="carousel-item" href="#two!"><img src="./images/products/svadebny/photobooks/one-r.jpg"></a>
-                    <a class="carousel-item" href="#four!"><img src="./images/products/svadebny/photobooks/three-r.jpg"></a>
-                    <a class="carousel-item" href="#five!"><img src="./images/products/svadebny/photobooks/four-r.jpg"></a>
+                    <a class="carousel-item" href="#three!"><img
+                        src="./images/products/svadebny/photobooks/two-r.jpg"></a>
+                    <a class="carousel-item" href="#one!"><img
+                        src="./images/products/svadebny/photobooks/face-r.jpg"></a>
+                    <a class="carousel-item" href="#two!"><img
+                        src="./images/products/svadebny/photobooks/one-r.jpg"></a>
+                    <a class="carousel-item" href="#four!"><img
+                        src="./images/products/svadebny/photobooks/three-r.jpg"></a>
+                    <a class="carousel-item" href="#five!"><img
+                        src="./images/products/svadebny/photobooks/four-r.jpg"></a>
                   </div>
                 </div>
                 <div class="col s4 info">
@@ -97,7 +102,7 @@
                     <button class="btn waves-effect waves-light">20x20</button>
                   </div>
                 </div>
-                
+
 
               </div>
 
@@ -108,31 +113,38 @@
               </div>
               <h3>Полиграфия</h3>
               <div class="content row">
-                  <div class="col s8 photo">
-                    <div class="carousel carousel-slider">
-                      <a class="carousel-item" href="#three!"><img src="./images/products/svadebny/photobooks/two-r.jpg"></a>
-                      <a class="carousel-item" href="#one!"><img src="./images/products/svadebny/photobooks/face-r.jpg"></a>
-                      <a class="carousel-item" href="#two!"><img src="./images/products/svadebny/photobooks/one-r.jpg"></a>
-                      <a class="carousel-item" href="#four!"><img src="./images/products/svadebny/photobooks/three-r.jpg"></a>
-                      <a class="carousel-item" href="#five!"><img src="./images/products/svadebny/photobooks/four-r.jpg"></a>
-                    </div>
+                <div class="col s8 photo">
+                  <div class="carousel carousel-slider">
+                    <a class="carousel-item" href="#five!"><img
+                        src="./images/products/svadebny/photobooks/four-r.jpg"></a>
+                    <a class="carousel-item" href="#three!"><img
+                        src="./images/products/svadebny/photobooks/two-r.jpg"></a>
+                    <a class="carousel-item" href="#one!"><img
+                        src="./images/products/svadebny/photobooks/face-r.jpg"></a>
+                    <a class="carousel-item" href="#two!"><img
+                        src="./images/products/svadebny/photobooks/one-r.jpg"></a>
+                    <a class="carousel-item" href="#four!"><img
+                        src="./images/products/svadebny/photobooks/three-r.jpg"></a>
+                    <a class="carousel-item" href="#five!"><img
+                        src="./images/products/svadebny/photobooks/four-r.jpg"></a>
                   </div>
-                  <div class="col s4 info">
-                    <h3>Подробное описание</h3>
-                    <div class="info__items">
-                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    </div>
-                    <h3>Шаблоны</h3>
-                    <div class="downloads">
-                      <a class="btn waves-effect waves-light modal-trigger" href="#hard-one">Книга втачку</a>
-                      <a class="btn waves-effect waves-light modal-trigger" href="#hard-two">Книга внакидку</a>
-                    </div>
-                  </div>
-                  
-  
                 </div>
+                <div class="col s4 info">
+                  <h3>Подробное описание</h3>
+                  <div class="info__items">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                  </div>
+                  <h3>Шаблоны</h3>
+                  <div class="downloads">
+                    <a class="btn waves-effect waves-light modal-trigger" href="#hard-one">Книга втачку</a>
+                    <a class="btn waves-effect waves-light modal-trigger" href="#hard-two">Книга внакидку</a>
+                  </div>
+                </div>
+
+
+              </div>
 
             </div>
           </div>
@@ -288,16 +300,16 @@
           </div>
         </div>
       </div>
-      <div class="section 4th-page">
+      <div class="section 4th-page fourth-section">
         <div class="container">
           <h2>Фотопроекты</h2>
           <div class="slide row">
-            <div class="col s8">
-                <div class="carousel carousel-slider">
-                    <a class="carousel-item" href="#one!"><img src="./images/photoprojects/newyear/1.jpg"></a>
-                    <a class="carousel-item" href="#two!"><img src="./images/photoprojects/newyear/2.jpg"></a>
-                    <a class="carousel-item" href="#three!"><img src="./images/photoprojects/newyear/3.jpg"></a>
-                  </div>
+            <div class="col s6">
+              <div class="carousel carousel-slider">
+                <a class="carousel-item" href="#one!"><img src="./images/photoprojects/newyear/1.jpg"></a>
+                <a class="carousel-item" href="#two!"><img src="./images/photoprojects/newyear/2.jpg"></a>
+                <a class="carousel-item" href="#three!"><img src="./images/photoprojects/newyear/3.jpg"></a>
+              </div>
             </div>
             <div class="col s4">
               <h3>Рекомендации</h3>
@@ -308,11 +320,11 @@
             </div>
           </div>
           <div class="slide row">
-            <div class="col s8">
-                <div class="carousel carousel-slider">
-                    <a class="carousel-item" href="#one!"><img src="./images/photoprojects/painters/1.jpg"></a>
-                    <a class="carousel-item" href="#two!"><img src="./images/photoprojects/painters/2.jpg"></a>
-                  </div>
+            <div class="col s6">
+              <div class="carousel carousel-slider">
+                <a class="carousel-item" href="#one!"><img src="./images/photoprojects/painters/1.jpg"></a>
+                <a class="carousel-item" href="#two!"><img src="./images/photoprojects/painters/2.jpg"></a>
+              </div>
             </div>
             <div class="col s4">
               <h3>Рекомендации</h3>
@@ -323,11 +335,11 @@
             </div>
           </div>
           <div class="slide row">
-            <div class="col s8">
-                <div class="carousel carousel-slider">
-                    <a class="carousel-item" href="#one!"><img src="./images/photoprojects/sunseed/1.jpg"></a>
-                    <a class="carousel-item" href="#two!"><img src="./images/photoprojects/sunseed/2.jpg"></a>
-                  </div>
+            <div class="col s6">
+              <div class="carousel carousel-slider">
+                <a class="carousel-item" href="#one!"><img src="./images/photoprojects/sunseed/1.jpg"></a>
+                <a class="carousel-item" href="#two!"><img src="./images/photoprojects/sunseed/2.jpg"></a>
+              </div>
             </div>
             <div class="col s4">
               <h3>Рекомендации</h3>
@@ -336,7 +348,7 @@
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, labore!</p>
               <button class="btn waves-effect waves-light">Заказать</button>
             </div>
-         </div>
+          </div>
         </div>
       </div>
       <div class="section 5th-page">
@@ -354,9 +366,9 @@
           <div class="row">
             <div class="col s6">
               <ul id="tabs-swipe-demo" class="tabs tabs-fixed-width">
-                <li class="tab"><a href="#hard-one-1">1</a></li>
-                <li class="tab"><a class="active" href="#hard-one-2"> 2</a></li>
-                <li class="tab"><a href="#hard-one-3"> 3</a></li>
+                <li class="tab"><a href="#hard-one-1">№1</a></li>
+                <li class="tab"><a class="active" href="#hard-one-2"> №2</a></li>
+                <li class="tab"><a href="#hard-one-3"> №3</a></li>
               </ul>
               <div id="hard-one-1" class="col s12"><img src="./images/products/tverdy/knigavnakid/face-r.jpg" alt="">
               </div>
@@ -377,7 +389,7 @@
                 <p>На 1 печатный лист внутреннего блока помещается 4 страницы.</p>
                 <button class="btn waves-effect waves-light modal-trigger" data-target="order">Заказать</button>
               </div>
-              <h3>Шаблоны:</h3>
+              <h3>Скачать шаблоны:</h3>
               <div class="downloads">
                 <button class="btn waves-effect waves-light">19x25</button>
                 <button class="btn waves-effect waves-light">20x20</button>
@@ -399,10 +411,10 @@
           <div class="row">
             <div class="col s6">
               <ul id="tabs-swipe-demo" class="tabs tabs-fixed-width">
-                <li class="tab"><a class="active" href="#hard-two-1">1</a></li>
-                <li class="tab"><a href="#hard-two-2"> 2</a></li>
-                <li class="tab"><a href="#hard-two-3"> 3</a></li>
-                <li class="tab"><a href="#hard-two-4"> 4</a></li>
+                <li class="tab"><a class="active" href="#hard-two-1">№1</a></li>
+                <li class="tab"><a href="#hard-two-2"> №2</a></li>
+                <li class="tab"><a href="#hard-two-3"> №3</a></li>
+                <li class="tab"><a href="#hard-two-4"> №4</a></li>
               </ul>
               <div id="hard-two-1" class="col s12"><img src="./images/products/tverdy/knigavtach/face-r.jpg" alt="">
               </div>
@@ -428,7 +440,7 @@
                 <p>На 1 печатный лист внутреннего блока помещается 2 страницы.</p>
                 <button class="btn waves-effect waves-light modal-trigger" data-target="order">Заказать</button>
               </div>
-              <h3>Шаблоны:</h3>
+              <h3>Скачать шаблоны:</h3>
               <div class="downloads">
                 <button class="btn waves-effect waves-light">20x30 гориз.</button>
                 <button class="btn waves-effect waves-light">22x30 верт.</button>
@@ -447,11 +459,11 @@
           <div class="row">
             <div class="col s6">
               <ul id="tabs-swipe-demo" class="tabs tabs-fixed-width">
-                <li class="tab"><a class="active" href="#hard-three-1">1</a></li>
-                <li class="tab"><a href="#hard-three-2"> 2</a></li>
-                <li class="tab"><a href="#hard-three-3"> 3</a></li>
-                <li class="tab"><a href="#hard-three-4"> 4</a></li>
-                <li class="tab"><a href="#hard-three-5"> 5</a></li>
+                <li class="tab"><a class="active" href="#hard-three-1">№1</a></li>
+                <li class="tab"><a href="#hard-three-2"> №2</a></li>
+                <li class="tab"><a href="#hard-three-3"> №3</a></li>
+                <li class="tab"><a href="#hard-three-4"> №4</a></li>
+                <li class="tab"><a href="#hard-three-5"> №5</a></li>
               </ul>
               <div id="hard-three-1" class="col s12"><img src="./images/products/tverdy/layflat/face-r.jpg" alt="">
               </div>
@@ -477,7 +489,7 @@
                 <p>На 1 печатный лист (1 разворот) внутреннего блока помещается 2 страницы.</p>
                 <button class="btn waves-effect waves-light modal-trigger" data-target="order">Заказать</button>
               </div>
-              <h3>Шаблоны:</h3>
+              <h3>Скачать шаблоны:</h3>
               <div class="downloads">
                 <button class="btn waves-effect waves-light">19x25</button>
                 <button class="btn waves-effect waves-light">22x31</button>
@@ -495,8 +507,8 @@
           <div class="row">
             <div class="col s6">
               <ul id="tabs-swipe-demo" class="tabs tabs-fixed-width">
-                <li class="tab"><a class="active" href="#hard-four-1">1</a></li>
-                <li class="tab"><a href="#hard-four-2"> 2</a></li>
+                <li class="tab"><a class="active" href="#hard-four-1">№1</a></li>
+                <li class="tab"><a href="#hard-four-2"> №2</a></li>
               </ul>
               <div id="hard-four-1" class="col s12"><img src="./images/products/tverdy/oktet/face-r.jpg" alt="">
               </div>
@@ -516,7 +528,7 @@
                 <p>Виды ламинации: глянцевая, матовая, антицарапин.</p>
                 <button class="btn waves-effect waves-light modal-trigger" data-target="order">Заказать</button>
               </div>
-              <h3>Шаблоны:</h3>
+              <h3>Скачать шаблоны:</h3>
               <div class="downloads">
                 <button class="btn waves-effect waves-light">15x21</button>
               </div>
@@ -533,9 +545,9 @@
           <div class="row">
             <div class="col s6">
               <ul id="tabs-swipe-demo" class="tabs tabs-fixed-width">
-                <li class="tab"><a class="active" href="#hard-five-1">1</a></li>
-                <li class="tab"><a href="#hard-five-2"> 2</a></li>
-                <li class="tab"><a href="#hard-five-3"> 3</a></li>
+                <li class="tab"><a class="active" href="#hard-five-1">№1</a></li>
+                <li class="tab"><a href="#hard-five-2"> №2</a></li>
+                <li class="tab"><a href="#hard-five-3"> №3</a></li>
               </ul>
               <div id="hard-five-1" class="col s12"><img src="./images/products/tverdy/planshet/face-r.jpg" alt="">
               </div>
@@ -555,7 +567,7 @@
                 <p>Виды ламинации: глянцевая, матовая, антицарапин.</p>
                 <button class="btn waves-effect waves-light modal-trigger" data-target="order">Заказать</button>
               </div>
-              <h3>Шаблоны:</h3>
+              <h3>Скачать шаблоны:</h3>
               <div class="downloads">
                 <button class="btn waves-effect waves-light">20x30</button>
                 <button class="btn waves-effect waves-light">23x31</button>
@@ -573,9 +585,9 @@
           <div class="row">
             <div class="col s6">
               <ul id="tabs-swipe-demo" class="tabs tabs-fixed-width">
-                <li class="tab"><a class="active" href="#hard-six-1">1</a></li>
-                <li class="tab"><a href="#hard-six-2"> 2</a></li>
-                <li class="tab"><a href="#hard-six-3"> 3</a></li>
+                <li class="tab"><a class="active" href="#hard-six-1">№1</a></li>
+                <li class="tab"><a href="#hard-six-2">№2</a></li>
+                <li class="tab"><a href="#hard-six-3">№3</a></li>
               </ul>
               <div id="hard-six-1" class="col s12"><img src="./images/products/tverdy/trumo/face-r.jpg" alt="">
               </div>
@@ -596,7 +608,7 @@
                 <p>Виды ламинации: глянцевая, матовая, антицарапин.</p>
                 <button class="btn waves-effect waves-light modal-trigger" data-target="order">Заказать</button>
               </div>
-              <h3>Шаблоны:</h3>
+              <h3>Скачать шаблоны:</h3>
               <div class="downloads">
                 <button class="btn waves-effect waves-light">20x30 верт.</button>
                 <button class="btn waves-effect waves-light">20x30 гориз.</button>
@@ -614,9 +626,9 @@
           <div class="row">
             <div class="col s6">
               <ul id="tabs-swipe-demo" class="tabs tabs-fixed-width">
-                <li class="tab"><a href="#test-swipe-1">1</a></li>
-                <li class="tab"><a class="active" href="#test-swipe-2"> 2</a></li>
-                <li class="tab"><a href="#test-swipe-3"> 3</a></li>
+                <li class="tab"><a href="#test-swipe-1">№1</a></li>
+                <li class="tab"><a class="active" href="#test-swipe-2"> №2</a></li>
+                <li class="tab"><a href="#test-swipe-3"> №3</a></li>
               </ul>
               <div id="test-swipe-1" class="col s12"><img src="./images/products/tverdy/knigavnakid/face-r.jpg" alt="">
               </div>
@@ -651,9 +663,9 @@
           <div class="row">
             <div class="col s6">
               <ul id="tabs-swipe-demo" class="tabs tabs-fixed-width">
-                <li class="tab"><a href="#test-swipe-1">1</a></li>
-                <li class="tab"><a class="active" href="#test-swipe-2"> 2</a></li>
-                <li class="tab"><a href="#test-swipe-3"> 3</a></li>
+                <li class="tab"><a href="#test-swipe-1">№1</a></li>
+                <li class="tab"><a class="active" href="#test-swipe-2"> №2</a></li>
+                <li class="tab"><a href="#test-swipe-3"> №3</a></li>
               </ul>
               <div id="test-swipe-1" class="col s12"><img src="./images/products/tverdy/knigavnakid/face-r.jpg" alt="">
               </div>
